Fixed classname and bottom padding for scrollbar

--- a/src/flask_debugtoolbar/static/css/toolbar.css
+++ b/src/flask_debugtoolbar/static/css/toolbar.css
@@ -201,11 +201,11 @@
   padding:0 0 0 20px;
 }
 
-#flDebug .flDebugPanelContent .scroll {
+#flDebug .flDebugPanelContent .flDebugScroll {
   height:100%;
   overflow:auto;
   display:block;
-  padding:0 10px 0 0;
+  padding:0 10px 10px 0;
 }
 
 #flDebug h3 {
